Add native featured image caption support
Add native featured image caption support

Added built-in support for displaying featured image captions without
requiring external plugins. Captions are pulled from attachment metadata
and styled consistently with inline image captions.

Changes:
- Modified single.php and index.php to display featured image captions
- Used wp_kses_post() to allow HTML formatting in captions
- Added CSS styling for .post-thumbnail .wp-caption-text
- Included dark mode support for caption text colour

This removes the dependency on the FSM Custom Featured Image Caption
plugin whilst maintaining the same functionality and appearance.

--- a/style.css
+++ b/style.css
@@ -219,6 +219,17 @@ article:last-child {
     margin-bottom: 1.5rem;
 }
 
+/* Featured image caption styling to match inline images */
+.post-thumbnail .wp-caption-text {
+    text-align: right;
+    font-style: italic;
+    font-size: 0.8125rem;
+    line-height: 1.5;
+    color: #666;
+    margin-top: 0.5rem;
+    padding-right: 0.5rem;
+}
+
 .post-thumbnail img {
     width: 100%;
     height: auto;
@@ -1030,5 +1041,9 @@ article:last-child {
 
     .related-posts h3 {
         color: #e1e1e1;
+    }
+
+    .post-thumbnail .wp-caption-text {
+        color: #aaa;
     }
 }
